# life_string_view

./: .gitignore  CMakeLists.txt  README.md  apply_code_format.sh  life_string_view.h
example/: CMakeLists.txt  example.cpp
tests/: CMakeLists.txt  test.cpp  test_main.cpp
